# C-Practice

./: CMakeLists.txt  addpntrs.cpp  addpntrs.h  array.cpp  array.h  arraynew.cpp  arraynew.h  delete.cpp  delete.h  pointMath.cpp  pointMath.h  pointpoint.cpp  pointpoint.h  problem.cpp  problem.h  test.cpp  test.h  test1.cpp  test1.h  test3.cpp  test3.h  use_new.cpp  use_new.h  vector.cpp  vector.h
